<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaludoPersonalizadoAmpliado</string>

    <!--Definimos los strings que necesitaremos en nuestra pantalla -->
    <string name="txvSaludo">Saludo Peronalizado</string>
    <string name="btnBoton">Saludo</string>
    <string name="showTime"> Mostrar fecha</string>
    <string name="noNombre"> Falta introducir nombre</string>
    <string name="saludoSr">Sr</string>
    <string name="saludoSra">Sra</string>
    <string name="entrada"></string>
    <string name="salida"></string>

    <!--Definimos dos string para los nuevos RadioButtons -->
    <string name="rdbHola">Hola</string>
    <string name="rbdAdios">Adios</string>


</resources>
